Fix facets and header overlap on desktop
Fixed a z-index issue when on desktop and scrolling down, the facets were on top of the header

--- a/src/Orckestra.Composer.Website/UI.Package/Sass/Custom/Search/_content-tabs.scss
+++ b/src/Orckestra.Composer.Website/UI.Package/Sass/Custom/Search/_content-tabs.scss
@@ -22,6 +22,7 @@
   z-index: 1042;
   @include media-breakpoint-up(lg) {
     top: 136px;
+    z-index: unset;
   }
   
   
